--- a/index.html
+++ b/index.html
@@ -1,26 +1,3 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>devnahora</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body>
-  <header>
-    <h1>devnahora</h1>
-    <p>Aplicações web prontas para usar ou vender.</p>
-  </header>
-  <main class="grid">
-    <section class="card"><h2>🧮 Calculadora de IMC</h2><p>Ideal para academias e clínicas.</p><a href="apps/calculadora-imc/index.html" class="btn" target="_blank">Ver Demo</a></section>
-    <section class="card"><h2>📓 Agenda de Clientes</h2><p>Cadastro simples com salvamento local.</p><a href="apps/agenda-clientes/index.html" class="btn" target="_blank">Ver Demo</a></section>
-    <section class="card"><h2>🎓 Site de Curso</h2><p>Landing page com botão de pagamento.</p><a href="apps/site-curso/index.html" class="btn" target="_blank">Ver Demo</a></section>
-    <section class="card"><h2>✅ To-do List</h2><p>Lista de tarefas com salvamento local.</p><a href="apps/todo-list/index.html" class="btn" target="_blank">Ver Demo</a></section>
-    <section class="card"><h2>🔗 Link na Bio</h2><p>Mini site com links principais.</p><a href="apps/link-bio/index.html" class="btn" target="_blank">Ver Demo</a></section>
-  </main>
-  <footer>
-    <p>© devnahora — Feito com 💻 por Kaluia</p>
-  </footer>
-</body>
-</html>
+<html lang="pt-BR"><head><meta charset="UTF-8" /><title>App</title></head>
+<body><h1>App funcionando: substitua este conteúdo com o app real.</h1></body></html>
